add the serializable class WebWeather & do the object writing into file

--- a/src/config.properties
+++ b/src/config.properties
@@ -40,4 +40,7 @@ DriveName = com.mysql.jdbc.Driver
 # the url for connecting to the database, this should be changed in the future
 DataUrl = jdbc:mysql://localhost:3306/MicroNet
 
+# file to contain the webweather info
+WeatherFile = DailyWeather
+
 
