final version, though the mail sending has a bug

--- a/src/config.properties
+++ b/src/config.properties
@@ -17,7 +17,7 @@ MailTo = cuiy14@mails.tsinghua.edu.cn
 # the e-mail sender
 MailFrom = cuiy379@gmail.com
 # the e-mail sender password
-MailPassword= s2718281
+MailPassword= I won't tell you, haha
 
 # weather api settings
 # the web urls to get the weather data
